--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ h6 {
   font-family: "Roboto", sans-serif;
 }
 
+
+@import url(http://weloveiconfonts.com/api/?family=brandico);
+
+/* brandico */
+[class*="brandico-"]:before {
+  font-family: 'brandico', sans-serif;
+}
+
 .clear-fix {
   overflow: auto;
 }
@@ -122,7 +130,7 @@ a {
 
 .gray-text {
   font-weight: bold;
-  color: #f7be4f;
+  color: #4d944d;
 }
 
 .gray {
